see previous commit

--- a/flapper-news/views/index.ejs
+++ b/flapper-news/views/index.ejs
@@ -6,7 +6,7 @@
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
-    <script src="app.js"></script>
+    <script src="/javascripts/angularApp.js"></script>
   </head>
   <body ng-app="flapperNews">
     <div class="row">
